objects/CN_Change_Request__c.object
<CustomObject>
    <fields>
        <fullName>CN_Account_Sales_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Sales Team</label>
        <referenceTo>CN_Sales_Team__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Account_Sinodis_Finance_AR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Sinodis Finance AR</label>
        <referenceTo>CN_Internal_Employee__c</referenceTo>
        <relationshipLabel>Change Requests (Sinodis Finance AR)</relationshipLabel>
        <relationshipName>Change_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Account_Sort_Key__c</fullName>
        <label>Account Sort key</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>000</fullName>
                    <label>000-Allocation number</label>
                </value>
                <value>
                    <fullName>001</fullName>
                    <label>001-Posting date</label>
                </value>
                <value>
                    <fullName>002</fullName>
                    <label>002-Doc.no., fiscal year</label>
                </value>
                <value>
                    <fullName>003</fullName>
                    <label>003-Document date</label>
                </value>
                <value>
                    <fullName>004</fullName>
                    <label>004-Branch account</label>
                </value>
                <value>
                    <fullName>005</fullName>
                    <label>005-Loc.currency amount</label>
                </value>
                <value>
                    <fullName>006</fullName>
                    <label>006-Doc.currency amount</label>
                </value>
                <value>
                    <fullName>007</fullName>
                    <label>007-Bill/exch.due date</label>
                </value>
                <value>
                    <fullName>008</fullName>
                    <label>008-Cost center</label>
                </value>
                <value>
                    <fullName>009</fullName>
                    <label>009-External doc.number</label>
                </value>
                <value>
                    <fullName>010</fullName>
                    <label>010-Purchase order no.</label>
                </value>
                <value>
                    <fullName>011</fullName>
                    <label>011-Plant number</label>
                </value>
                <value>
                    <fullName>012</fullName>
                    <label>012-Vendor number</label>
                </value>
                <value>
                    <fullName>014</fullName>
                    <label>014-Purchase order</label>
                </value>
                <value>
                    <fullName>015</fullName>
                    <label>015-Personnel number</label>
                </value>
                <value>
                    <fullName>016</fullName>
                    <label>016-Settlement period</label>
                </value>
                <value>
                    <fullName>017</fullName>
                    <label>017-Settl.per., pers.no.</label>
                </value>
                <value>
                    <fullName>018</fullName>
                    <label>018-Asset number</label>
                </value>
                <value>
                    <fullName>021</fullName>
                    <label>021-Segment text</label>
                </value>
                <value>
                    <fullName>022</fullName>
                    <label>022-One-time name / city</label>
                </value>
                <value>
                    <fullName>023-One-time city / name</fullName>
                </value>
                <value>
                    <fullName>024-Document header text</fullName>
                </value>
                <value>
                    <fullName>025-CPU date</fullName>
                </value>
                <value>
                    <fullName>026-Pmnt per.bslne date</fullName>
                </value>
                <value>
                    <fullName>027-Value date</fullName>
                </value>
                <value>
                    <fullName>028-Asset number</fullName>
                </value>
                <value>
                    <fullName>029-Pstng month, vendor</fullName>
                </value>
                <value>
                    <fullName>031-Customer number</fullName>
                </value>
                <value>
                    <fullName>032-Pstng yr,month,curr.</fullName>
                </value>
                <value>
                    <fullName>033-Cost center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Ready for Approval</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Account_Store_Name_CN__c</fullName>
        <label>Account Commercial Name (CN)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Store_Name_EN__c</fullName>
        <label>Account Commercial Name (EN)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Subcategory__c</fullName>
        <label>Account Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CN_Account_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Access Bakery</fullName>
                </value>
                <value>
                    <fullName>Access Pastry</fullName>
                </value>
                <value>
                    <fullName>Access Ice cream</fullName>
                </value>
                <value>
                    <fullName>Core Bakery</fullName>
                </value>
                <value>
                    <fullName>Core Pastry</fullName>
                </value>
                <value>
                    <fullName>Core Ice cream</fullName>
                </value>
                <value>
                    <fullName>Premium Bakery</fullName>
                </value>
                <value>
                    <fullName>Premium Pastry</fullName>
                </value>
                <value>
                    <fullName>Premium Ice cream</fullName>
                </value>
                <value>
                    <fullName>Casual Dining - Western</fullName>
                </value>
                <value>
                    <fullName>Casual Dining - Asian excl CH</fullName>
                </value>
                <value>
                    <fullName>Casual Dining - Chinese</fullName>
                </value>
                <value>
                    <fullName>Fine Dining - Western</fullName>
                </value>
                <value>
                    <fullName>Fine Dining - Asian excl CH</fullName>
                </value>
                <value>
                    <fullName>Fine Dining - Chinese</fullName>
                </value>
                <value>
                    <fullName>Central Kitchen</fullName>
                </value>
                <value>
                    <fullName>Airline</fullName>
                </value>
                <value>
                    <fullName>Cruise</fullName>
                </value>
                <value>
                    <fullName>Corporate Sales</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Access Coffee Shop</fullName>
                </value>
                <value>
                    <fullName>Access Tea Shop</fullName>
                </value>
                <value>
                    <fullName>Core Coffee Shop</fullName>
                </value>
                <value>
                    <fullName>Core Tea Shop</fullName>
                </value>
                <value>
                    <fullName>Premium Coffee Shop</fullName>
                </value>
                <value>
                    <fullName>Premium Tea Shop</fullName>
                </value>
                <value>
                    <fullName>BAPA OEM</fullName>
                </value>
                <value>
                    <fullName>HORECA OEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Account_Tax_Registration_No__c</fullName>
        <label>Tax Registration No.</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_The_Number_Of_Seats__c</fullName>
        <label>Account The Number of Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Account_URL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_510,FIND(&quot;services&quot;, $Api.Partner_Server_URL_510)-1) &amp; CN_Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Acct_Assgmt_Group__c</fullName>
        <defaultValue>text(01)</defaultValue>
        <label>Acct assgmt group</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Actual_Sales_Volume__c</fullName>
        <label>Actual sales volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Address__c</fullName>
        <label>Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Approval_Send_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Send Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Approve_Aging_Trigger_Datetime__c</fullName>
        <label>Approve Aging Trigger Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Approve_Step__c</fullName>
        <label>Approve Step</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Step1</fullName>
                </value>
                <value>
                    <fullName>Step2</fullName>
                </value>
                <value>
                    <fullName>Step3</fullName>
                </value>
                <value>
                    <fullName>Step4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests_Approver1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests_Approver2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests_Approver3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Billing_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Billing_Contact_Name_CN_First_Name__c</fullName>
        <label>Billing Contact Name(CN)-First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Billing_Contact_Name_CN_Last_Name__c</fullName>
        <label>Billing Contact Name(CN)-Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Billing_Contact_Name_EN__c</fullName>
        <label>Billing Contact Name(EN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Billing_Email__c</fullName>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CN_Billing_Mobile_Phone__c</fullName>
        <inlineHelpText>Please enter the number in the format of 1XXXXXXXXXX or XXX-XXXXXXXX or XXXX-XXXXXXXX-XXX (X is number).</inlineHelpText>
        <label>Billing Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CN_Billing_Phone_Number__c</fullName>
        <inlineHelpText>Please enter the number in the format of 1XXXXXXXXXX or XXX-XXXXXXXX or XXXX-XXXXXXXX-XXX (X is number).</inlineHelpText>
        <label>Billing Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CN_Block_Sales_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Block Sales Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_CR_Account_Customer_Code__c</fullName>
        <formula>CN_Account_Name__r.CN_Customer_Code__c &amp;  New_CN_Contact_License_Name__r.CN_Customer_Code__c &amp;  New_CN_ShipTo_Sold_To_Party_Customer__r.CN_Customer_Code__c</formula>
        <label>CR Account Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_CR_Account_License_Name_CN__c</fullName>
        <formula>CN_Account_Name__r.Name&amp;CN_Contact_Account_Name__c&amp;CN_ShipTo_Account_Name__c</formula>
        <label>CR Account License Name(CN)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_CR_Email_Subject__c</fullName>
        <formula>IF(
  NOT(ISBLANK( CN_Account_Name__c)),
  CN_Account_Name__r.CN_Account_Email_Subject__c,
  IF(
    NOT(ISBLANK( New_CN_Contact_License_Name__c)),
    New_CN_Contact_License_Name__r.CN_Account_Email_Subject__c,
    IF(
      NOT(ISBLANK( New_CN_ShipTo_Sold_To_Party_Customer__c)),
      New_CN_ShipTo_Sold_To_Party_Customer__r.CN_Account_Email_Subject__c,
      &apos;&apos;
    )
  )
)</formula>
        <label>CR Email Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Cash_Mgmt_Group__c</fullName>
        <label>Cash Mgmt Group</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Change_Request_Status__c</fullName>
        <label>Change Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Ready for Approval</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Account_Name__c</fullName>
        <formula>New_CN_Contact_License_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Billing_To_Address__c</fullName>
        <label>Contact Billing To Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Birthday__c</fullName>
        <label>Contact Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Contact_CN_First_Name__c</fullName>
        <label>Contact Name(CN))-First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Contact_CN_Last_Name__c</fullName>
        <label>Contact Name(CN))-Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Dept_Of_Contact_Person__c</fullName>
        <label>Department of Contact person</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0001</fullName>
                    <label>0001-Purchasing Dept</label>
                </value>
                <value>
                    <fullName>0002</fullName>
                    <label>0002-Sales Dept</label>
                </value>
                <value>
                    <fullName>0003</fullName>
                    <label>0003-Administration Dept</label>
                </value>
                <value>
                    <fullName>0004</fullName>
                    <label>0004-Production Dept</label>
                </value>
                <value>
                    <fullName>0005</fullName>
                    <label>0005-QA Dept</label>
                </value>
                <value>
                    <fullName>0006</fullName>
                    <label>0006-Secretary&apos;s Office</label>
                </value>
                <value>
                    <fullName>0007</fullName>
                    <label>0007-Financial Dept</label>
                </value>
                <value>
                    <fullName>0008</fullName>
                    <label>0008-Legal Dept</label>
                </value>
                <value>
                    <fullName>0009</fullName>
                    <label>0009-Human Resources Dept</label>
                </value>
                <value>
                    <fullName>0010</fullName>
                    <label>0010-General Affairs Dept</label>
                </value>
                <value>
                    <fullName>0011</fullName>
                    <label>0011-Sales Promotion Dept</label>
                </value>
                <value>
                    <fullName>0012</fullName>
                    <label>0012-International Dept</label>
                </value>
                <value>
                    <fullName>0013</fullName>
                    <label>0013-Export Dept</label>
                </value>
                <value>
                    <fullName>0014</fullName>
                    <label>0014-Import Dept</label>
                </value>
                <value>
                    <fullName>0015</fullName>
                    <label>0015-Public Relation Dept</label>
                </value>
                <value>
                    <fullName>0016</fullName>
                    <label>0016-Advertising Dept</label>
                </value>
                <value>
                    <fullName>0017</fullName>
                    <label>0017-Planning Dept</label>
                </value>
                <value>
                    <fullName>0018</fullName>
                    <label>0018-R&amp;D Dept</label>
                </value>
                <value>
                    <fullName>0019</fullName>
                    <label>0019-Product Dev. Dept</label>
                </value>
                <value>
                    <fullName>0020</fullName>
                    <label>0020-Food &amp; Beverage Dept</label>
                </value>
                <value>
                    <fullName>0021</fullName>
                    <label>0021-Service Dept</label>
                </value>
                <value>
                    <fullName>0022</fullName>
                    <label>0022-Technical Support</label>
                </value>
                <value>
                    <fullName>0023</fullName>
                    <label>0023-IT Dept</label>
                </value>
                <value>
                    <fullName>0024</fullName>
                    <label>0024-Logistics Dept</label>
                </value>
                <value>
                    <fullName>0025</fullName>
                    <label>0025-Cold Kitchen</label>
                </value>
                <value>
                    <fullName>0026</fullName>
                    <label>0026-Hot Kitchen</label>
                </value>
                <value>
                    <fullName>0027</fullName>
                    <label>0027-Banquet Kitchen</label>
                </value>
                <value>
                    <fullName>0028</fullName>
                    <label>0028-Pastry</label>
                </value>
                <value>
                    <fullName>0029</fullName>
                    <label>0029-Backery</label>
                </value>
                <value>
                    <fullName>0030</fullName>
                    <label>0030-Bar</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Family_Info__c</fullName>
        <label>Contact Family Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Contact_License_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact License Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Change Requests (Contact License Name)</relationshipLabel>
        <relationshipName>Change_Requests8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Mobile__c</fullName>
        <inlineHelpText>Please enter the number in the format of 1XXXXXXXXXX or XXX-XXXXXXXX or XXXX-XXXXXXXX-XXX (X is number).</inlineHelpText>
        <label>Contact Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Name_EN__c</fullName>
        <label>Contact Name(EN)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Open_Field_To_Comment__c</fullName>
        <label>Contact Open field to comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Phone_Number__c</fullName>
        <inlineHelpText>Please enter the number in the format of 1XXXXXXXXXX or XXX-XXXXXXXX or XXXX-XXXXXXXX-XXX (X is number).</inlineHelpText>
        <label>Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Reports_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Reports To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>01-Billing</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>02-Business</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>04-Others</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <isActive>false</isActive>
                    <label>03-Receiving</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Contact_URL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_510,FIND(&quot;services&quot;, $Api.Partner_Server_URL_510)-1) &amp; CN_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Wechat_ID__c</fullName>
        <label>Contact Wechat ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>(1 AND 2 AND 3) OR 4 OR 5</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Update Account Request, Update Contact Request, New Contact Request, Update Ship-to Request, New Ship-to Request</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.CN_Account_Status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.CN_Synchronized__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Update Account Request, Update Contact Request, New Contact Request, Update Ship-to Request, New Ship-to Request</value>
            </filterItems>
            <filterItems>
                <field>$User.CN_Is_Integration_User__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Change Requests (Contact)</relationshipLabel>
        <relationshipName>Change_Requests_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Country_CN__c</fullName>
        <label>Country(CN)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>中国</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Current_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Cust_Pric_Proc__c</fullName>
        <defaultValue>text(3)</defaultValue>
        <label>Cust.pric.proc.</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Status__c</fullName>
        <label>Customer Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Sleep</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Delivery_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivery Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CN_Finance_AR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance AR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests_Finance_AR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Incoterms__c</fullName>
        <label>Incoterms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CFR</fullName>
                    <label>CFR-Costs and freight</label>
                </value>
                <value>
                    <fullName>CIF</fullName>
                    <label>CIF-Costs, insurance &amp; freight</label>
                </value>
                <value>
                    <fullName>CIP</fullName>
                    <label>CIP-Carriage and insurance paid to</label>
                </value>
                <value>
                    <fullName>CPT</fullName>
                    <label>CPT-Carriage paid to</label>
                </value>
                <value>
                    <fullName>DAF</fullName>
                    <label>DAF-Delivered at frontier</label>
                </value>
                <value>
                    <fullName>DDP</fullName>
                    <label>DDP-Delivered Duty Paid</label>
                </value>
                <value>
                    <fullName>DDU</fullName>
                    <label>DDU-Delivered Duty Unpaid</label>
                </value>
                <value>
                    <fullName>DEQ</fullName>
                    <label>DEQ-Delivered ex quay (duty paid)</label>
                </value>
                <value>
                    <fullName>DES</fullName>
                    <label>DES-Delivered ex ship</label>
                </value>
                <value>
                    <fullName>EXW</fullName>
                    <label>EXW-Ex Works</label>
                </value>
                <value>
                    <fullName>FAS</fullName>
                    <label>FAS-Free Alongside Ship</label>
                </value>
                <value>
                    <fullName>FCA</fullName>
                    <label>FCA-Free Carrier</label>
                </value>
                <value>
                    <fullName>FH</fullName>
                    <label>FH-Free house</label>
                </value>
                <value>
                    <fullName>FOB</fullName>
                    <label>FOB-Free on board</label>
                </value>
                <value>
                    <fullName>UN</fullName>
                    <label>UN-Not Free</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Indicator_Record_Payment_History__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Indicator: Record Payment History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Invoice_Info_Same_As_Sold_To_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice info Same as Sold-to Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Invoicing_Address_CN__c</fullName>
        <label>Invoicing Address(CN)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Is_Auto_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Auto Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Generate_From_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Generate From Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Loyalty_Level__c</fullName>
        <label>Loyalty Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>